Updating Github Pages

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <p>
       The 'scratchpad'
     </p>
-    <pre class="bash"><code>git stash # Saves changes to the stash</code><code>git stash pop # Applies the top most changes</code><code>git stash save "Not Ready" # Gives the stash a better name</code></pre>
+    <pre class="bash"><code>git stash # Saves changes to the stash</code><code>git stash pop # Applies the top most changes</code><code>git stash save "Not Ready" # Gives the stash a better name</code><code>git stash list # List your stashes, top stash will be popped first</code><code>git stash show # Show what changed in your last stash</code></pre>
   </section>
   <section>
     <h2>
